--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "description": "portfolio2.0",
     "scripts": {
         "start": "tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack serve --config webpack.dev.js ",
-        "build": "rm -rf dist && tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack --config webpack.prod.js",
-        "test": "jest --watch /tests",
-        "server": "rm -rf dist && webpack --config webpack.prod.js && node server.js"
+        "build": "rm -rf dist && tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack --config webpack.prod.js && node server.js",
+        "test": "jest --watch /tests"
     },
     "repository": {
         "type": "git",
@@ -14,7 +13,7 @@
     },
 
     "engines": {
-        "node": ">=15.3.0",
+        "node": ">=14.15.0",
         "npm": ">=6.0.0"
     },
 
