--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "portfolio2.0",
     "scripts": {
         "start": "tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack serve --config webpack.dev.js ",
-        "build": "rm -rf dist && tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack --config webpack.prod.js && node server.js",
+        "build": "rm -rf dist && tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack --config webpack.prod.js",
         "test": "jest --watch /tests"
     },
     "repository": {
