--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
     front:
         container_name: starterkit
+        env_file: .env
         build: ./
         command: npm start
         working_dir: /app
