--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "start": "tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack serve --config webpack.dev.js ",
         "build": "rm -rf dist && tailwind build ./public/index.css -o ./src/Tailwind/index.css && webpack --config webpack.prod.js",
+        "nodemon": "nodemon api/server.js",
         "test": "jest --watch /tests"
     },
     "repository": {
@@ -19,11 +20,13 @@
     "license": "GPL",
     "dependencies": {
         "@material-ui/core": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.57",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "aos": "^2.3.4",
         "axios": "^0.21.0",
+        "clsx": "^1.1.1",
         "jest": "^26.6.3",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -55,6 +58,8 @@
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^4.5.0",
         "knex": "^0.21.13",
+        "mongodb": "^3.6.3",
+        "nodemon": "^2.0.6",
         "pg": "^8.5.1",
         "postcss-loader": "^4.1.0",
         "style-loader": "^2.0.0",
