--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
         "node": ">=14.15.0",
         "npm": ">=6.0.0"
     },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+        }
+    },
     "author": "xlincw0w",
     "license": "GPL",
     "dependencies": {
@@ -33,6 +39,7 @@
         "react-icons": "^4.1.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
+        "react-typical": "^0.1.3",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
     },
@@ -41,7 +48,10 @@
         "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
+        "@babel/preset-typescript": "^7.12.7",
         "@types/aos": "^3.0.3",
+        "@types/enzyme": "^3.10.8",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/jest": "^26.0.19",
         "@types/material-ui": "^0.21.8",
         "@types/node": "^14.14.16",
@@ -54,6 +64,8 @@
         "cors": "^2.8.5",
         "css-loader": "^5.0.1",
         "dotenv": "^8.2.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
         "express": "^4.17.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^4.5.0",
